simple_example/k8s/aggregator-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator
  template:
    metadata:
      labels:
        app: aggregator
    spec:
      containers:
        - name: aggregator
          image: arun6783/aggregator
---
kind: Service
apiVersion: v1
metadata:
  name: aggregator-srv
spec:
  selector:
    app: aggregator
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: LoadBalancer
