simple_example/k8s/simplemathapp-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplemathapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplemathapp
  template:
    metadata:
      labels:
        app: simplemathapp
    spec:
      containers:
        - name: simplemathapp
          image: arun6783/simplemathapp
---
kind: Service
apiVersion: v1
metadata:
  name: simplemathapp-srv
spec:
  selector:
    app: simplemathapp
  ports:
    - name: http
      port: 8082
      targetPort: 8082
