simple_example/k8s/square-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: square-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: square
  template:
    metadata:
      labels:
        app: square
    spec:
      containers:
        - name: square
          image: arun6783/square
---
kind: Service
apiVersion: v1
metadata:
  name: square-srv
spec:
  selector:
    app: square
  ports:
    - name: http
      port: 4000
      targetPort: 4000
    - name: https
      port: 4443
      targetPort: 4443
    - name: grpc
      port: 4500
      targetPort: 4500
