simple_example/k8s/kong-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kong-istio-ingress
#   annotations:
#     konghq.com/preserve-host: 'false'
# spec:
#   ingressClassName: kong
#   rules:
#     - host: simplemathapp.web
#       http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: simplemathapp-srv
#                 port:
#                   number: 8082

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-istio-ingress
  annotations:
    konghq.com/preserve-host: 'false'
spec:
  ingressClassName: kong
  rules:
    - host: simplemathapp.web
    - http:
        paths:
          - path: /(|api).*
            pathType: Prefix
            backend:
              service:
                name: simplemathapp-srv
                port:
                  number: 8082
          - path: /
            pathType: Exact
            backend:
              service:
                name: simplemathapp-srv
                port:
                  number: 8082
